--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>退休精算師：級距完全顯示版</title>
+    <title>退休精算師</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -16,7 +16,7 @@
 <body class="p-4 md:p-8">
     <div class="max-w-6xl mx-auto">
         <header class="mb-8 text-center">
-            <h1 class="text-3xl font-black text-slate-800">💰 退休資產模擬 (含級距與通膨)</h1>
+            <h1 class="text-3xl font-black text-slate-800">💰 退休資產模擬 (含通膨)</h1>
             <p class="text-slate-500 mt-2 text-sm font-bold uppercase text-indigo-600">勞保上限 45,800 / 勞退上限 150,000</p>
         </header>
 
@@ -196,4 +196,5 @@
         update();
     </script>
 </body>
+
 </html>
